# pacifist

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  paciFISTConfig.h
docs/: Doxyfile.in  Doxyfile.in.bak
one_off/: CMakeLists.txt
one_off/red_black_tree/: CMakeLists.txt  red_black_tree.c
py_tools/generateTypesHeader/: generateTypesHeader.py  generateTypesHeader_test.py
src/: CMakeLists.txt  engine_config.pfengine  main.c  pacifist_config.ini  project_data_types.h  project_types.h
src/_games/: snake.h
src/_games/LittlestNecromancer/: LNGameMode.h  LittlestNecromancer.c  LittlestNecromancer.h
src/_games/Slain/: Slain.c  Slain.h  SlainGameMode.h  slain.xml
src/algo/: search.c  search.h
src/bit/: bitfield.h
src/core/: WindowConfigStruct.h  assert.h  common.h  debug.h  define.h  error.c  error.h
src/date/: datetime.c  datetime.h
src/engine/: CMakeLists.txt  PFEngineConfiguration.h  PFEngineState.c  PFEngineState.h  engine_define.c  engine_define.h
src/engine/entry_point/: PFEngineEntryPoint.c  PFEngineEntryPoint.h  PFEngineInitialization.c  PFEngineInitialization.h  pf_engine_entry_point.c  pf_engine_initialization.c  pf_engine_initialization.h
src/gui/: PFDebugGui.h  PFGuiState.h
src/log/: log.c  log.h  log_category.h  log_utility.h
src/memory/: HashTable.c  HashTable.h  RedBlackTree.h
src/memory/allocator/: MemoryArena.h  PFAllocator.c  PFAllocator.h  PFAllocator_FreeList.c  PFAllocator_FreeList.h  PFMemoryArena.c  PFMemoryArena.h  allocator_utilities.h
src/memory/hash_table/: CompactHashTable.c  CompactHashTable.h  HashTable.c  HashTable.h  PFCompactHashTable.c  PFCompactHashTable.h  QuickHashTable.h
src/memory/list/: LinkedList.c  LinkedList.h
src/memory/tree/: RedBlackTree.c  RedBlackTree.h
src/os/: os_define.h  os_utility.c  os_utility.h  path.c  path.h
src/parse/xml/: pf_xml_parse_functions.h  xml.c  xml.h
src/parsers/: ConfigFileParser.h
src/patching/: notes
src/reflection/: metadata_reflection_system.c  metadata_reflection_system.h
src/rendering/: render.h
src/resource/: PFManagedResource.h  PFResourceManager.c  PFResourceManager.h  notes
src/string/: PFStringInternmentSingleton.c  PFStringInternmentSingleton.h  StringInternmentSingleton.h  pstring.c  pstring.h  pstring_utf8.h
src/test/: CMakeLists.txt  main.cc
src/test/core/: CMakeLists.txt  common.h
src/type/: typed_pointer.h
test/: CMakeLists.txt  pftest_utilities.h  tests_log_config.conf  unit_test_runner_engine.c
test/_game/LittlestNecromancer_tests/: LNGameMode.test.c
test/_game/slain_tests/: SlainGameMode.test.c
test/algo_tests/: search.test.c
test/bit/: bitfield.test.c
test/core_tests/: error.test.c
test/datetime_test/: datetime.test.c
test/engine_tests/: PFEngineState.test.c
test/engine_tests/entry_point_tests/: PFEngineEntryPoint.test.c  PFEngineInitialization.test.c
test/log_tests/: log.test.c
test/memory_tests/: CompactHashTable.test.c  HashTable.test.c  LinkedList.test.c  MemoryArena.test.c  PFAllocator.test.c  PFCompactHashTable.test.c  PFMemoryArena.test.c  RedBlackTree.test.c
test/os_tests/: os_utility.test.c  path.test.c
test/parse_tests/xml_tests/: test_file_root.xml  xml.test.c
test/resource_tests/: PFManagedResource.test.c  PFResourceManager.test.c
test/string_tests/: PFStringInternmentSingleton.test.c  PString.test.c
